[package]
name = "smup-client"
version = "0.1.0"
authors = ["andrebq <andrebq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.50.0"
piston_window = "0.109.0"
specs = { version = "0.16.1", features = ["shred-derive", "specs-derive"] }
